# HC_Cursor_ClaudeCode

./: .gitignore  CLAUDE.md  README.md  notes.md  task_plan.md
claude_hc/: IMPLEMENTATION.md  README.md  compare_architectures.py  debug_example.py  hyper_connections.py  pyproject.toml  train_example.py  visualize_architecture.py
claude_manus_hc/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  example_usage.py  notes.md  pyproject.toml  task_plan.md
claude_manus_hc/hyper_connections/: __init__.py  hyper_connection.py  transformer_hyper.py
cursor_hc/: ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  example_usage.py  hyper_connections.py  pyproject.toml  requirements.txt  test_implementation.py  transformer_hc.py
cursor_manus_hc/: .gitignore  INSTALL.md  QUICKSTART.md  README.md  START_HERE.md  SUMMARY.md  example_usage.py  findings.md  hyper_connections.py  progress.md  pyproject.toml  task_plan.md  test_implementation.py
