[project]
name = "cursor-hc"
version = "0.1.0"
description = "Hyper-Connections: A novel alternative to residual connections for Transformers (ICLR 2025)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "numpy>=1.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

